# AIAgent

./: .gitignore  README.md  capacitor.config.json  index.html  package.json  pyproject.toml  run.bat  run_project.bat  vite.config.js
Zhilian-Agent/src/A2A/currency/: __main__.py  agent.py  agent_executor.py  test_client.py
Zhilian-Agent/src/A2A/hot_search/: agent_client.py  agent_server.py
Zhilian-Agent/src/agents/: __init__.py  database_agent.py  image_understand_agent.py  number_analysis_agent.py  react_agent.py  response_text_agent.py  travel_agent.py  tts_agent.py  visual_story_telling.py
Zhilian-Agent/src/chat/: backend.py  react_chat.py  test.py
Zhilian-Agent/src/chat/test/: testdatabase.py  testimageans.py  (+3 more)
Zhilian-Agent/src/kb/: csv.txt  中国联通_流量专区.csv  中国联通_资费专区_全国套餐.csv
Zhilian-Agent/src/mcp/: mcp_server.json
Zhilian-Agent/src/prompt/: react.py
Zhilian-Agent/src/recognition/: __init__.py  intent_recognition.py
Zhilian-Agent/src/tools/: __init__.py  database.py  hot_serach.py  my_img_gen.py  phone_call_handler.py  prompt.py  text_to_speech.py
project/: cs.html  main.html  华中科技大学_基于多智能体架构的通用型AI助手技术研究任务书.docx
src/: App.vue  main.css  main.js  router.js  style.css
src/components/: AIWelcomeMessage.vue  ChatInputBox.vue  MarkdownRenderer.vue  ModelSelector.vue  SidebarHistory.vue
src/services/: backend.js  deepseekService.js  model_schemas.json  websocket.js
src/stores/: chatData.js  modelStore.js
src/utils/: camera.js  permissions.js  speech.js
src/views/: ChatPage.vue  PhoneCallPage.vue  ThemeSettingsPage.vue  UserInfoPage.vue
