[project]
name = "zhilian-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "langchain>=0.3.27",
    "pyttsx3>=2.99",
    "qwen-agent[code-interpreter,gui,mcp,rag]>=0.0.29",
    "requests>=2.32.4",
    "x-twitter-mcp>=0.1.11",
]
